force-app/main/default/objects/Campaign/fields/AllowPayments__c.field-meta.xml
<CustomField>
    <fullName>AllowPayments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Payments</label>
    <type>Checkbox</type>
</CustomField>