force-app/main/default/objects/Campaign/fields/DonationUrl__c.field-meta.xml
<CustomField>
    <fullName>DonationUrl__c</fullName>
    <label>Donation Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>