force-app/main/default/objects/Campaign/fields/EventAmount__c.field-meta.xml
<CustomField>
    <fullName>EventAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Event Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>