force-app/main/default/objects/Campaign/fields/MaxPaymentLength__c.field-meta.xml
<CustomField>
    <fullName>MaxPaymentLength__c</fullName>
    <label>Max Payment Length (in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>