force-app/main/default/objects/Campaign/validationRules/Add_payment_length_for_payments.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_payment_length_for_payments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AllowPayments__c,
ISBLANK(MaxPaymentLength__c)
)</errorConditionFormula>
    <errorDisplayField>MaxPaymentLength__c</errorDisplayField>
    <errorMessage>To allow payments you must provide a max payment length</errorMessage>
</ValidationRule>